[tool.poetry]
name = "grrmlog_parser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools!=50.0",
    "wheel",
]
build-backend = "poetry.core.masonry.api"
